Migrated to Java 11 and JavaFX 11 (OpenJFX)